--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -980,21 +980,19 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "BalancedRandomForestClassifier(random_state=1)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'low_risk': 51352, 'high_risk': 260})\n"
+     ]
     }
    ],
    "source": [
     "# Resample the training data with the BalancedRandomForestClassifier\n",
     "from imblearn.ensemble import BalancedRandomForestClassifier\n",
     "brf = BalancedRandomForestClassifier(n_estimators=100, random_state=1)\n",
-    "brf.fit(X_train, y_train)"
+    "brf.fit(X_train, y_train)\n",
+    "print(Counter(y_train))"
    ]
   },
   {
@@ -1024,11 +1022,21 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[   58    29]\n",
+      " [ 1560 15558]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Display the confusion matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "matrix = confusion_matrix(y_test, y_pred)"
+    "matrix = confusion_matrix(y_test, y_pred)\n",
+    "print(matrix)"
    ]
   },
   {
@@ -1181,17 +1189,26 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'low_risk': 51352, 'high_risk': 260})\n"
+     ]
+    }
+   ],
    "source": [
     "# Train the EasyEnsembleClassifier\n",
     "from imblearn.ensemble import EasyEnsembleClassifier\n",
     "easy = EasyEnsembleClassifier(n_estimators = 100,random_state=42)\n",
-    "easy = easy.fit(X_train, y_train)"
+    "easy = easy.fit(X_train, y_train)\n",
+    "print(Counter(y_train))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1217,7 @@
        "0.9261867926884788"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1254,13 +1271,6 @@
     "# Print the imbalanced classification report\n",
     "print(classification_report_imbalanced(y_test, y_pred))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
